css/style.css
/*Reset CSS*/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

:root {
  --Bg-blue: #D0E4F4;
  --White: #ffffff;
}

/*Generic*/
body {
  font-size: 14px;
  font-family: "Jost", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.container {
  max-width: 1240px;
  margin: 0 auto;
}

/*Header*/
/*Navbar*/
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 15px 0px;
}

nav img {
  max-width: 50px;
  aspect-ratio: 16 /9;
}

/*Main*/
/*Hero section*/
.hero-section {
  display: grid;
  grid-template-columns: repeat(11, 1fr);
  grid-auto-rows: 1fr;
}

.hero-content {
  grid-column: 1 /6;
  grid-row: 2 /6;
  display: flex;
  flex-direction: column;
  gap: 30px;
  padding: 30px;
}

h1 {
  font-size: 4.5rem;
  font-weight: 900;
}

.hero-content p {
  line-height: 2;
  font-size: 1.5rem;
  font-weight: 500;
  padding-right: 130px;
}

.btn {
  width: max-content;
  color: black;
  text-decoration: none;
  font-size: 1.3rem;
  padding: 16px 32px;
  border: 1px solid black;
}

.blue-bg {
  grid-column: 8/ 12;
  grid-row: 1 /4;
  background-color: var(--Bg-blue);
  z-index: 0;
}

.polka-bg {
  grid-column: 5 /9;
  grid-row: 4/7;
  margin-top: 50px;
  margin-bottom: -50px;
  z-index: 1;
  background-image: url(../assets/images/u_150.png);
}

.hero-img {
  margin-top: -50px;
  margin-bottom: 50px;
  grid-column: 6/ 11;
  grid-row: 2/ 7;
  z-index: 2;
  background: url(../assets/images/as.jpg) center/cover;
}

.blue-bg2 {
  grid-column: 4 / 12;
  grid-row: 6 / 8;
  margin-left: -20px;
  margin-top: -30px;
  z-index: 0;
  position: relative;
}

.blue-bg2::after {
  content: '';
  width: 100vw;
  height: 100%;
  z-index: 0;
  position: absolute;
  background-color: var(--Bg-blue);
  left: 100%;
}

.sub-sign {
  z-index: 1;
  font-size: 1.1rem;
  padding: 30px;
  grid-column: 1/3;
  grid-row: 7/8;
  justify-self: last baseline;
}

.sub-sign a {
  color: black;
}

.page2 {
  display: grid;
  grid-template-columns: repeat(11, 1fr);
  grid-auto-rows: 1fr;
}

.page2-img {
  background: url(../assets/images/wf.jpg) center/cover;
  grid-column: 1/7;
  grid-row: 1/5;
  z-index: 2;
}

.blue-bg3 {
  grid-column: 4 / 12;
  grid-row: 1 / 8;
  margin-left: -20px;
  z-index: 0;
  position: relative;
}

.blue-bg3::after {
  content: '';
  width: 100vw;
  height: 100%;
  z-index: 0;
  position: absolute;
  background-color: var(--Bg-blue);
  left: 100%;
}

.grid-box {
  margin-left: -40px;
  grid-column: 7/12;
  grid-row: 2/7;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(2, 1fr);
  gap: 10px;
  z-index: 3;
}

.grid-box div {
  display: flex;
  flex-direction: column;
  gap: 20px;
  background-color: var(--White);
  padding: 20px;
}

.grid-box h2 {
  font-size: 1.8rem;
  font-weight: 700;
}

.grid-box p {
  line-height: 1.5;
  font-size: 1.2rem;
}

.box1 {
  grid-column: 1;
  grid-row: 1;
}

.box2 {
  grid-column: 2;
  grid-row: 1;
}

.box3 {
  grid-column: 1;
  grid-row: 2;
}

.box4 {
  grid-column: 2;
  grid-row: 2;
}

.polka-bg2 {
  grid-column: 1 /5;
  grid-row: 4/6;
  margin-top: 50px;
  margin-bottom: -50px;
  z-index: 1;
  position: relative;
}

.polka-bg2::after {
  content: '';
  width: 100vw;
  height: 100%;
  z-index: 1;
  position: absolute;
  background: url(../assets/images/u_150.png);
  right: 0;
}

